@@ -1,3 +1,8 @@
+2009-02-026  Matthias Clasen <mclasen@redhat.com>
+
+	* gnome-session/gs-idle-monitor.c: Ask for AlertNotify in a way
+	that XSync understands. (#567958)
+
 2009-02-26  Vincent Untz  <vuntz@gnome.org>
 
 	* capplet/gsm-properties-dialog.c: (edit_app_dialog):
